feat(grapql): #2 implement GraphQL DataFetcher